# assignments_ind2627

./: .gitignore  README.md  assignments_ind2627.Rproj  pyproject.toml  test.R
HW/: homework_1.html  homework_1.qmd
HW/HW1/: homework_1.html  homework_1.qmd
HW/HW1/homework_1_files/libs/bootstrap/: bootstrap-147a257f4e2f2cc71d5a5fdc58fdaed8.min.css  bootstrap-fa93d7e0d6afdf16acf99877d423145b.min.css  bootstrap.min.css
drafts/: draft_HW1_2.R  draft_HW1_3.R  draft_hw1_1.R
drafts/draft_HW1/: draft_hw1_1.R
drafts/draft_HW3/: hw3_1.R
