[tool.poetry]
name = "islind2627"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # This works in tool.poetry section

[tool.poetry.dependencies]
python = "3.13.*"
numpy = "^2.3.0"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
scipy = "^1.15.3"
scikit-learn = "^1.7.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
islp = "^0.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
